[gd_scene load_steps=3 format=3 uid="uid://b4gg0kbb0ln1c"]

[ext_resource type="Texture2D" uid="uid://bxtocmen5o7oq" path="res://assets/sprites/filledsquare.png" id="1_uqta6"]
[ext_resource type="Script" path="res://entities/binds/bind_spawner.gd" id="2_qg701"]

[node name="BindSpawner" type="NinePatchRect" groups=["Key"]]
self_modulate = Color(0.501961, 1, 0.776471, 1)
offset_left = 2.0
offset_right = 66.0
offset_bottom = 64.0
mouse_filter = 0
texture = ExtResource("1_uqta6")
patch_margin_left = 12
patch_margin_top = 12
patch_margin_right = 12
patch_margin_bottom = 12
script = ExtResource("2_qg701")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Key"
horizontal_alignment = 1
vertical_alignment = 1
clip_text = true

[node name="CommandMessage" type="Panel" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = -205.0
offset_right = -2.0
offset_bottom = 65.0

[node name="Label" type="Label" parent="CommandMessage"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 3.0
offset_right = -3.0
grow_horizontal = 2
grow_vertical = 2
text = "Command"

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="gui_input" from="." to="." method="mouse_input"]
[connection signal="mouse_entered" from="." to="." method="change_mouse_inside" binds= [true]]
[connection signal="mouse_exited" from="." to="." method="change_mouse_inside" binds= [false]]
[connection signal="timeout" from="Timer" to="." method="set_popup_visibility" binds= [true]]
